--- a/classComposer/public/html/carousel.html
+++ b/classComposer/public/html/carousel.html
@@ -1,4 +1,4 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class=" container carousel slide" data-ride="carousel">
      
      
       <div class="carousel-inner" ng-controller="CarouselCtrl" role="listbox">
