--- a/classComposer/public/html/index.html
+++ b/classComposer/public/html/index.html
@@ -31,6 +31,7 @@
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
 		<!--  AngularJS-->
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js" type="text/javascript"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js" type="text/javascript"></script>
 		<!-- UI Bootstrap: https://angular-ui.github.io/bootstrap/ -->
 				<script src="/js/ui-bootstrap-tpls-0.14.3.min.js" type="text/javascript"></script>
 
@@ -197,6 +198,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script> 
 
 	<!-- Scripts-->
+	
 	<script src="/js/BootstrapUI_Controllers.js" type="text/javascript"></script>
 	<script src="/js/main.js" type="text/javascript"></script>
 
