able to store users and schools

--- a/classComposer/public/html/home.html
+++ b/classComposer/public/html/home.html
@@ -37,7 +37,7 @@
                       <div layout="column" class="md-toolbar-tools-bottom inset">
                         <user-avatar></user-avatar>
                         <span></span>
-                        <div>{{user.username}}</div>
+                        <div>{{user.userName}}</div>
                         <div>{{user.email}}</div>
                       </div>
             </md-toolbar>
