--- a/classComposer/public/html/signInModal.html
+++ b/classComposer/public/html/signInModal.html
@@ -52,6 +52,18 @@
             <!-- Registration Form (add role. first and last name --> 
                                         <form id="register-form" action="/auth/signup" method="post" role="form" style="display: none;">
                                             <div class="form-group">
+                                                <input type="text" name="firstName" id="firstName" tabindex="1" class="form-control" placeholder="First Name" value="">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" name="lastName" id="lastName" tabindex="1" class="form-control" placeholder="First Name" value="">
+                                            </div>
+                                            <div class="form-group">
+                                                <select name="role" id="role" tabindex="1" class="form-control" placeholder="Role" value="">
+                                                    <option value="principal">Principal</option>
+                                                    <option value="teacher">Teacher</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
                                                 <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
                                             </div>
                                             <div class="form-group">
