--- a/classComposer/public/html/home.html
+++ b/classComposer/public/html/home.html
@@ -111,7 +111,11 @@
                               <ng-md-icon icon="search"></ng-md-icon>
                             </md-button>
                             
-                            <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
+                            <!-- <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
+                              <ng-md-icon icon="more_vert"></ng-md-icon>
+                            </md-button> -->
+
+                             <md-button aria-label="Open Settings" ng-href="/auth/logout">
                               <ng-md-icon icon="more_vert"></ng-md-icon>
                             </md-button>
                       </div>
