--- a/classComposer/public/html/signInModal.html
+++ b/classComposer/public/html/signInModal.html
@@ -55,7 +55,7 @@
                                                 <input type="text" name="firstName" id="firstName" tabindex="1" class="form-control" placeholder="First Name" value="">
                                             </div>
                                             <div class="form-group">
-                                                <input type="text" name="lastName" id="lastName" tabindex="1" class="form-control" placeholder="First Name" value="">
+                                                <input type="text" name="lastName" id="lastName" tabindex="1" class="form-control" placeholder="Last Name" value="">
                                             </div>
                                             <div class="form-group">
                                                 <select name="role" id="role" tabindex="1" class="form-control" placeholder="Role" value="">
@@ -67,13 +67,13 @@
                                                 <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
                                             </div>
                                             <div class="form-group">
-                                                <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
-                                            </div>
-                                            <div class="form-group">
                                                 <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
                                             </div>
 
                                             <div class="form-group">
