--- a/classComposer/public/html/home.html
+++ b/classComposer/public/html/home.html
@@ -13,8 +13,12 @@
     <!-- Angular Material -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/0.11.4/angular-material.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <!-- main.css -->
     <link rel="stylesheet" href="/css/main.css">
+
+<!-- added for the icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <!-- javascript dependencies -->
     <!-- jquery used for the animated signInModal / jquery code could be found in BootstrapUI_Cpntrollers.js under the ModalInstanceCtrl controller-->
@@ -24,6 +28,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js" type="text/javascript"></script>
     <!-- UI Bootstrap: https://angular-ui.github.io/bootstrap/ -->
     <script src="/js/ui-bootstrap-tpls-0.14.3.min.js" type="text/javascript"></script>
+    <!-- Drag and Drop -->
+        <script type="text/javascript" src="/js/angular-drag-and-drop-lists.js"></script>
   </head>
 
 
@@ -138,11 +144,14 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script> 
     
 <!-- Main.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
     <script type="text/javascript" src="/js/BootstrapUI_Controllers.js"></script>
     
     <script type="text/javascript" src="/js/dataInputTabModalCtrl.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
+    <!-- the angular student list factory -->
+    <script type="text/javascript" src="/js/studentList.js"></script>
   </body>
 
 </html>
