--- a/classComposer/public/html/index.html
+++ b/classComposer/public/html/index.html
@@ -15,11 +15,15 @@
 	    <!-- Angular Material -->
 			    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/0.11.4/angular-material.css">
 			    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+			    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 		<!--  Bootstrap StyleSheets-->
 				<!-- Latest compiled and minified CSS -->
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 				<!-- Optional theme -->
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+		
+		<!-- added for the icons -->
+  				<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- Custom styles for SingInModal -->
 	    		<link href="/css/signInModal.css" rel="stylesheet">
 		<!-- Custom styles for Carousel -->
@@ -34,6 +38,9 @@
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js" type="text/javascript"></script>
 		<!-- UI Bootstrap: https://angular-ui.github.io/bootstrap/ -->
 				<script src="/js/ui-bootstrap-tpls-0.14.3.min.js" type="text/javascript"></script>
+		<!-- Drag and Drop -->
+				<script type="text/javascript" src="/js/angular-drag-and-drop-lists.js"></script>
+
 
 
 
@@ -199,8 +206,12 @@
 
 	<!-- Scripts-->
 	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script src="/js/BootstrapUI_Controllers.js" type="text/javascript"></script>
 	<script src="/js/main.js" type="text/javascript"></script>
+
+	 <!-- the angular student list factory -->
+    <script type="text/javascript" src="/js/studentList.js"></script>
 
 </body>
 </html>
