--- a/classComposer/public/html/index.html
+++ b/classComposer/public/html/index.html
@@ -20,7 +20,7 @@
 				<!-- Latest compiled and minified CSS -->
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 				<!-- Optional theme -->
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+				<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous"> -->
 		
 		<!-- added for the icons -->
   				<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -31,11 +31,17 @@
 		<!-- main.css -->
 				<link rel="stylesheet" href="/css/main.css">
 	<!-- Javascipt src -->
+
+		
+
 		<!-- jquery used for the animated signInModal / jquery code could be found in BootstrapUI_Cpntrollers.js under the ModalInstanceCtrl controller-->
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
 		<!--  AngularJS-->
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js" type="text/javascript"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js" type="text/javascript"></script>
+				<!-- for the Charts  -->
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/0.8.5/angular-chart.min.js"></script>
 		<!-- UI Bootstrap: https://angular-ui.github.io/bootstrap/ -->
 				<script src="/js/ui-bootstrap-tpls-0.14.3.min.js" type="text/javascript"></script>
 		<!-- Drag and Drop -->
@@ -55,7 +61,7 @@
 	<div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar  navbar-static-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -153,11 +159,11 @@
 
 	      <div class="row featurette">
 	        <div class="col-md-7">
-	          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-	          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+	          <h2 class="featurette-heading"> <span class="text-muted">Change the way class lists are created at your school.</span></h2>
+	          <p class="lead"></p>
 	        </div>
 	        <div class="col-md-5">
-	          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+	          <img class="featurette-image img-responsive center-block" ng-src='/imgs/oldway.jpg' alt="Generic placeholder image">
 	        </div>
 	      </div>
 
@@ -165,11 +171,11 @@
 
 	      <div class="row featurette">
 	        <div class="col-md-7 col-md-push-5">
-	          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-	          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+	          <h2 class="featurette-heading"><span class="text-muted">Create balanced class lists at the click of a button.</span></h2>
+	          <p class="lead"></p>
 	        </div>
 	        <div class="col-md-5 col-md-pull-7">
-	          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+	          <img class="featurette-image img-responsive center-block" ng-src='/imgs/newway.png' alt="Generic placeholder image">
 	        </div>
 	      </div>
 
@@ -177,11 +183,19 @@
 
 	      <div class="row featurette">
 	        <div class="col-md-7">
-	          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-	          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+	          <h2 class="featurette-heading"><span class="text-muted">Easily account for all criteria to achieve balance among classes.</span></h2>
+	          <p class="lead">
+	          	<ul>
+	          	<li>Behavior ratings - be confident you are not creating a challenging behavior class.</li>
+				<li>Academic levels - reading, math, and writing.</li>
+				<li>Identified labels -  ELL, GT, IEP, etc.</li>
+				<li>Last year's teacher totals - ensure previous classes are evenly distributed.</li>
+				</ul>
+	          </p>
+
 	        </div>
 	        <div class="col-md-5">
-	          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+	          <img class="featurette-image img-responsive center-block" ng-src='/imgs/Profile.png' alt="Generic placeholder image">
 	        </div>
 	      </div>
 
