--- a/classComposer/public/html/index.html
+++ b/classComposer/public/html/index.html
@@ -163,7 +163,7 @@
 	          <p class="lead"></p>
 	        </div>
 	        <div class="col-md-5">
-	          <img class="featurette-image img-responsive center-block" ng-src='/imgs/oldway.jpg' alt="Generic placeholder image">
+	          <img class="featurette-image img-responsive center-block" ng-src='/imgs/oldway.JPG' alt="Generic placeholder image">
 	        </div>
 	      </div>
 
